// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`classToFunctional should convert class to functional comp 1`] = `
Array [
  Object {
    "operation": "insert",
    "payload": "function ClassComp(props)",
    "start": 0,
  },
  Object {
    "end": 139,
    "operation": "remove",
    "start": 0,
  },
  Object {
    "operation": "insert",
    "payload": "
	let self = {props};
",
    "start": 140,
  },
  Object {
    "operation": "insert",
    "payload": "self",
    "start": 157,
  },
  Object {
    "end": 161,
    "operation": "remove",
    "start": 157,
  },
  Object {
    "operation": "insert",
    "payload": "self",
    "start": 193,
  },
  Object {
    "end": 197,
    "operation": "remove",
    "start": 193,
  },
  Object {
    "operation": "insert",
    "payload": "self",
    "start": 223,
  },
  Object {
    "end": 227,
    "operation": "remove",
    "start": 223,
  },
  Object {
    "end": 257,
    "operation": "remove",
    "start": 255,
  },
]
`;

exports[`classToFunctional should supports different superclass should support Component 1`] = `
Array [
  Object {
    "operation": "insert",
    "payload": "function ClassComp(props)",
    "start": 0,
  },
  Object {
    "end": 133,
    "operation": "remove",
    "start": 0,
  },
  Object {
    "operation": "insert",
    "payload": "
	let self = {props};
",
    "start": 134,
  },
  Object {
    "operation": "insert",
    "payload": "self",
    "start": 151,
  },
  Object {
    "end": 155,
    "operation": "remove",
    "start": 151,
  },
  Object {
    "operation": "insert",
    "payload": "self",
    "start": 187,
  },
  Object {
    "end": 191,
    "operation": "remove",
    "start": 187,
  },
  Object {
    "operation": "insert",
    "payload": "self",
    "start": 217,
  },
  Object {
    "end": 221,
    "operation": "remove",
    "start": 217,
  },
  Object {
    "end": 251,
    "operation": "remove",
    "start": 249,
  },
]
`;

exports[`classToFunctional should supports different superclass should support PureComponent 1`] = `
Array [
  Object {
    "operation": "insert",
    "payload": "function ClassComp(props)",
    "start": 0,
  },
  Object {
    "end": 137,
    "operation": "remove",
    "start": 0,
  },
  Object {
    "operation": "insert",
    "payload": "
	let self = {props};
",
    "start": 138,
  },
  Object {
    "operation": "insert",
    "payload": "self",
    "start": 155,
  },
  Object {
    "end": 159,
    "operation": "remove",
    "start": 155,
  },
  Object {
    "operation": "insert",
    "payload": "self",
    "start": 191,
  },
  Object {
    "end": 195,
    "operation": "remove",
    "start": 191,
  },
  Object {
    "operation": "insert",
    "payload": "self",
    "start": 221,
  },
  Object {
    "end": 225,
    "operation": "remove",
    "start": 221,
  },
  Object {
    "end": 255,
    "operation": "remove",
    "start": 253,
  },
]
`;

exports[`classToFunctional should supports different superclass should support React.PureComponent 1`] = `
Array [
  Object {
    "operation": "insert",
    "payload": "function ClassComp(props)",
    "start": 0,
  },
  Object {
    "end": 143,
    "operation": "remove",
    "start": 0,
  },
  Object {
    "operation": "insert",
    "payload": "
	let self = {props};
",
    "start": 144,
  },
  Object {
    "operation": "insert",
    "payload": "self",
    "start": 161,
  },
  Object {
    "end": 165,
    "operation": "remove",
    "start": 161,
  },
  Object {
    "operation": "insert",
    "payload": "self",
    "start": 197,
  },
  Object {
    "end": 201,
    "operation": "remove",
    "start": 197,
  },
  Object {
    "operation": "insert",
    "payload": "self",
    "start": 227,
  },
  Object {
    "end": 231,
    "operation": "remove",
    "start": 227,
  },
  Object {
    "end": 261,
    "operation": "remove",
    "start": 259,
  },
]
`;
